--- a/extension/popup.html
+++ b/extension/popup.html
@@ -76,12 +76,72 @@
     .user-info strong {
       color: #212529;
     }
+    .toggle-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 15px;
+      padding: 10px;
+      background-color: #f8f9fa;
+      border-radius: 4px;
+    }
+    .toggle-label {
+      font-size: 14px;
+      color: #495057;
+      font-weight: 500;
+    }
+    .toggle-switch {
+      position: relative;
+      display: inline-block;
+      width: 50px;
+      height: 24px;
+    }
+    .toggle-switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    .toggle-slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 24px;
+    }
+    .toggle-slider:before {
+      position: absolute;
+      content: "";
+      height: 18px;
+      width: 18px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+    input:checked + .toggle-slider {
+      background-color: #4CAF50;
+    }
+    input:checked + .toggle-slider:before {
+      transform: translateX(26px);
+    }
   </style>
 </head>
 <body>
   <h2>SSO Auto Login</h2>
   <div id="userInfo" class="user-info" style="display: none;">
     <strong>User:</strong> <span id="userId">-</span>
+  </div>
+  <div class="toggle-container">
+    <span class="toggle-label">Auto Login</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="autoLoginToggle">
+      <span class="toggle-slider"></span>
+    </label>
   </div>
   <button id="executeBtn">Execute Login</button>
   <button id="openSsoBtn" class="secondary">Open SSO Page</button>
