--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,91 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
-      width: 300px;
+      width: 340px;
+      padding: 0;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background: #f5f5f5;
+    }
+    .header {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       padding: 20px;
-      font-family: Arial, sans-serif;
+      color: white;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     h2 {
-      margin-top: 0;
-      font-size: 18px;
+      margin: 0 0 5px 0;
+      font-size: 20px;
+      font-weight: 600;
     }
-    button {
-      width: 100%;
-      padding: 12px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-      margin-bottom: 10px;
+    .version {
+      font-size: 11px;
+      opacity: 0.9;
+      font-weight: 400;
     }
-    button:hover {
-      background-color: #45a049;
-    }
-    button:disabled {
-      background-color: #cccccc;
-      cursor: not-allowed;
-    }
-    button.secondary {
-      background-color: #007bff;
-    }
-    button.secondary:hover {
-      background-color: #0056b3;
-    }
-    #status {
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-    .success {
-      background-color: #d4edda;
-      color: #155724;
-    }
-    .error {
-      background-color: #f8d7da;
-      color: #721c24;
-    }
-    .info {
-      background-color: #d1ecf1;
-      color: #0c5460;
-    }
-    .settings-link {
-      display: block;
-      margin-top: 10px;
-      text-align: center;
-      color: #007bff;
-      text-decoration: none;
-      font-size: 14px;
-    }
-    .settings-link:hover {
-      text-decoration: underline;
+    .container {
+      padding: 16px;
     }
     .user-info {
-      margin-bottom: 15px;
-      padding: 10px;
-      background-color: #f8f9fa;
-      border-radius: 4px;
+      margin-bottom: 12px;
+      padding: 12px;
+      background-color: white;
+      border-radius: 8px;
       font-size: 13px;
       color: #495057;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
     }
     .user-info strong {
       color: #212529;
+    }
+    .settings-section {
+      background: white;
+      border-radius: 8px;
+      padding: 12px;
+      margin-bottom: 12px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
+    }
+    .settings-title {
+      font-size: 12px;
+      font-weight: 600;
+      color: #666;
+      margin-bottom: 10px;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
     }
     .toggle-container {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 15px;
-      padding: 10px;
-      background-color: #f8f9fa;
-      border-radius: 4px;
+      padding: 8px 0;
     }
     .toggle-label {
       font-size: 14px;
-      color: #495057;
+      color: #333;
       font-weight: 500;
     }
     .toggle-switch {
@@ -109,7 +89,7 @@
       right: 0;
       bottom: 0;
       background-color: #ccc;
-      transition: .4s;
+      transition: .3s;
       border-radius: 24px;
     }
     .toggle-slider:before {
@@ -120,33 +100,132 @@
       left: 3px;
       bottom: 3px;
       background-color: white;
-      transition: .4s;
+      transition: .3s;
       border-radius: 50%;
     }
     input:checked + .toggle-slider {
-      background-color: #4CAF50;
+      background-color: #667eea;
     }
     input:checked + .toggle-slider:before {
       transform: translateX(26px);
     }
+    .divider {
+      height: 1px;
+      background: #e0e0e0;
+      margin: 8px 0;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 15px;
+      font-weight: 500;
+      margin-bottom: 8px;
+      transition: transform 0.1s, box-shadow 0.2s;
+      box-shadow: 0 2px 6px rgba(102, 126, 234, 0.3);
+    }
+    button:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
+    }
+    button:active {
+      transform: translateY(0);
+    }
+    button:disabled {
+      background: #cccccc;
+      cursor: not-allowed;
+      box-shadow: none;
+    }
+    button.secondary {
+      background: white;
+      color: #667eea;
+      border: 2px solid #667eea;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.08);
+    }
+    button.secondary:hover {
+      background: #f8f9ff;
+      box-shadow: 0 2px 8px rgba(102, 126, 234, 0.2);
+    }
+    .settings-link {
+      display: block;
+      margin-top: 12px;
+      text-align: center;
+      color: #667eea;
+      text-decoration: none;
+      font-size: 13px;
+      font-weight: 500;
+    }
+    .settings-link:hover {
+      text-decoration: underline;
+    }
+    #status {
+      margin-top: 12px;
+      padding: 10px;
+      border-radius: 6px;
+      font-size: 13px;
+      animation: fadeIn 0.3s;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-5px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .success {
+      background-color: #d4edda;
+      color: #155724;
+      border-left: 3px solid #28a745;
+    }
+    .error {
+      background-color: #f8d7da;
+      color: #721c24;
+      border-left: 3px solid #dc3545;
+    }
+    .info {
+      background-color: #d1ecf1;
+      color: #0c5460;
+      border-left: 3px solid #17a2b8;
+    }
   </style>
 </head>
 <body>
-  <h2>SSO Auto Login</h2>
-  <div id="userInfo" class="user-info" style="display: none;">
-    <strong>User:</strong> <span id="userId">-</span>
+  <div class="header">
+    <h2>SSO Auto Login</h2>
+    <div class="version">v<span id="version">1.1.0</span></div>
   </div>
-  <div class="toggle-container">
-    <span class="toggle-label">Auto Login</span>
-    <label class="toggle-switch">
-      <input type="checkbox" id="autoLoginToggle">
-      <span class="toggle-slider"></span>
-    </label>
+
+  <div class="container">
+    <div id="userInfo" class="user-info" style="display: none;">
+      <strong>User:</strong> <span id="userId">-</span>
+    </div>
+
+    <div class="settings-section">
+      <div class="settings-title">Settings</div>
+      <div class="toggle-container">
+        <span class="toggle-label">Auto Login</span>
+        <label class="toggle-switch">
+          <input type="checkbox" id="autoLoginToggle">
+          <span class="toggle-slider"></span>
+        </label>
+      </div>
+      <div class="divider"></div>
+      <div class="toggle-container">
+        <span class="toggle-label">Show Alert</span>
+        <label class="toggle-switch">
+          <input type="checkbox" id="showAlertToggle">
+          <span class="toggle-slider"></span>
+        </label>
+      </div>
+    </div>
+
+    <button id="executeBtn">Execute Login</button>
+    <button id="openSsoBtn" class="secondary">Open SSO Page</button>
+    <a href="#" id="settingsLink" class="settings-link">⚙️ Settings</a>
+    <div id="status"></div>
   </div>
-  <button id="executeBtn">Execute Login</button>
-  <button id="openSsoBtn" class="secondary">Open SSO Page</button>
-  <a href="#" id="settingsLink" class="settings-link">Settings</a>
-  <div id="status"></div>
+
   <script src="popup.js"></script>
 </body>
 </html>
